flaskbiob/static/main.css
body {
  background: #fafafa;
  color: #333333;
}

h1, h2, h3, h4, h5, h6 {
  color: #444444;
}

.bg-custom {
  background-color: #14202a;
}

.site-header .navbar-nav .nav-link {
  color: #cbd5db;
}

.site-header .navbar-nav .nav-link:hover {
  color: #ffffff;
}

.site-header .navbar-nav .nav-link.active {
  font-weight: 500;
}

.article-title {
  color: #444444;
}

a.article-title:hover {
  color: #428bca;
  text-decoration: none;
}

.account-img {
  height: 125px;
  width: 125px;
  margin-right: 20px;
  margin-bottom: 16px;
}

.account-heading {
  font-size: 2.5rem;
}

#footer{
background-color: #14202a;
}

.footer-text{
  color: #f7f7f7;
}

.button-icon{
    max-width: 50px;
}

.button-icon:hover {
    filter: grayscale(80%);
}

figure{
    text-align: center;
}

figcaption{
    color: #5e5e5e;
}

.footer-links{
}

#footer h6{
    color: #BF4A4A;
    font-weight: 600;
}

.bdrbottom{
    border-width:2px !important;
    border-color: #8c1f1f !important;
}

.pagination > li > a
{
    background-color: white;
    color: #444444;
}

.pagination > li > a:focus,
.pagination > li > a:hover,
.pagination > li > span:focus,
.pagination > li > span:hover
{
    color: #5a5a5a;
    background-color: #eee;
    border-color: #ddd;
}

.pagination > .active > a
{
    color: white;
    background-color: #8c1f1f !Important;
    border: solid 1px #8c1f1f !Important;
}

.pagination > .active > a:hover
{
    background-color: #BF4A4A !Important;
    border: solid 1px #BF4A4A;
    border-color: #BF4A4A !Important;
}

.banner-top{
    background-color: #14202a;
}

.banner-top img{
    max-width: 12%;
    min-width: 10%;
    height: auto;
}

.sticky-offset{
    top: 70px;
}

